# bible-mcp

./: .gitignore  README.md  pyproject.toml
docs/integrations/: llm-entity-rewrite.md
docs/superpowers/plans/: 2026-04-03-bible-mcp-v2-entity-passages.md  2026-04-03-bible-mcp-v2-entity-query-router.md  2026-04-03-bible-mcp-v2-entity-search-expansion.md
docs/superpowers/specs/: 2026-04-03-bible-mcp-v2-entity-passages-design.md  2026-04-03-bible-mcp-v2-entity-query-router-design.md  2026-04-03-bible-mcp-v2-entity-search-expansion-design.md  2026-04-03-bible-mcp-v2-metadata-relations-design.md  2026-04-03-korean-bible-mcp-design.md  2026-04-04-bible-mcp-llm-entity-rewrite-design.md  2026-04-04-bible-mcp-theographic-ingest-design.md
src/bible_mcp/: cli.py  config.py  mcp_server.py
src/bible_mcp/client_patterns/: __init__.py  answering.py  entity_retry.py
src/bible_mcp/db/: connection.py  schema.py
src/bible_mcp/domain/: metadata.py  models.py
src/bible_mcp/index/: fts.py  (+2 more)
tests/: conftest.py  golden_queries.json  test_answering_prompt.py  test_chunking_and_fts.py  test_embeddings_index.py  test_entity_passage_service.py  test_entity_query_router.py  test_entity_retry.py  test_entity_service.py  test_golden_queries.py  test_importer.py  test_mcp_tools.py  test_metadata_importer.py  test_metadata_loader.py  test_metadata_overlay.py  test_passage_service.py  test_query_parser.py  test_related_summary_entities.py  test_relation_service.py  test_search_service.py  test_smoke.py  test_source_db_validation.py  test_theographic_fetcher.py  test_theographic_normalizer.py
(+25 files in other folders)
