[project]
name = "bible-mcp"
version = "0.1.0"
description = "Local-first Korean Bible MCP server"
requires-python = ">=3.12"
dependencies = [
  "faiss-cpu>=1.11.0",
  "mcp>=1.9.0",
  "pydantic>=2.11.0",
  "sentence-transformers>=4.1.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
bible-mcp = "bible_mcp.cli:app"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
